feat: bank-exemple create-pix-account
